samples/_failures_safe/1761526697_b359e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35728570.c: In function ‘main’:
./samples/SAFE/__tmp_35728570.c:152:5: error: expected declaration or statement at end of input
  152 |     printf("Compression ratio: %.2f\n", ratio);
      |     ^~~~~~
